--- a/gracias.html
+++ b/gracias.html
@@ -19,7 +19,7 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li><a href="./index (2).html">Inicio</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
                     <li><a href="index.html#sobremi">Sobre mi</a></li>
                     <li><a href="linea.html">linea de tiempo</a></li>
                     <li><a href="index.html#curriculum">inventario</a></li>
