--- a/linea.html
+++ b/linea.html
@@ -16,7 +16,7 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li><a href="./index (2).html">Inicio</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
                     <li><a href="linea.html">Linea de tiempo</a></li>
                     <li><a href="index.html#curriculum">Inventario</a></li>
                     <li><a href="index.html#foda">Foda</a></li>
