--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#sobremi">Sobre mi</a></li>
-                    <li><a href="#linea.html">linea de tiempo</a></li>
+                    <li><a href="linea.html">linea de tiempo</a></li>
                     <li><a href="#curriculum">inventario</a></li>
                     <li><a href="#foda">Foda</a></li>
                     <li><a href="biografia.html">biografia</a></li>
-                    <li><a href="#gracias.html#">Agradecimiento</a></li>
+                    <li><a href="gracias.html#">Agradecimiento</a></li>
                 </ul>
             </nav>
             <div class="nav-responsive">
