--- a/linea.html
+++ b/linea.html
@@ -21,7 +21,7 @@
                     <li><a href="index.html#curriculum">Inventario</a></li>
                     <li><a href="index.html#foda">Foda</a></li>
                     <li><a href="MapaMental/index.html">Mapa mental</a></li>
-                    <li><a href="arbol/index.html">arbol</a></li>
+                    <li><a href="arbol/index.html">Arbol</a></li>
                 </ul>
             </nav>
             <div class="nav-responsive">
